# maplibre-tile-spec

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  LICENSE  LICENSE-APACHE  LICENSE-MIT  MODULE.bazel  README.md  RELEASE.md  biome.json  dist-workspace.toml  index.html  jest.config.json  justfile  mkdocs.yml  package-lock.json  package.json  release-plz.toml  search.json  sitemap.xml  tsconfig.json
converter/java/resources/: CMakeLists.txt  FsstWrapper.cpp  FsstWrapper.h  Makefile  compile  compile-windows.bat  compile.bat  compile.sh
cpp/: .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  CTestCustom.cmake  MODULE.bazel  README.md  mod.just  package-lock.json  package.json  test.sh
cpp/bazel/check/: BUILD.bazel  avx.c  avx2.c  sse42.c
cpp/cmake/: AddCXXCompilerFlag.cmake  clang-tidy.cmake
cpp/include/: common.hpp  decoder.hpp  feature.hpp  geometry.hpp  layer.hpp  tile.hpp  tileset_metadata.hpp
cpp/include/metadata/: stream.hpp  tileset.hpp
cpp/include/mlt/: common.hpp  coordinate.hpp  decoder.hpp  encoder.hpp  feature.hpp  geojson.hpp  geometry.hpp  geometry_vector.hpp  json.hpp  layer.hpp  polyfill.hpp  projection.hpp  properties.hpp  tile.hpp
cpp/include/util/: buffer_stream.hpp
cpp/src/: decoder.cpp  decoding_utils.hpp  feature.cpp  tileset_metadata.cpp
cpp/src/decode/: geometry.hpp  int.cpp  int.hpp  ints.cpp  ints.hpp  property.hpp  string.hpp
cpp/src/fastpfor/: bitpacking.cpp  bitpackinghelpers.h  compositecodec.h  simple8b.h  util.h  variablebyte.h
cpp/src/metadata/: stream.cpp  tileset.cpp
cpp/src/mlt/: decoder.cpp  encoder.cpp  feature.cpp  geometry_vector.cpp  layer.cpp  properties.cpp
cpp/src/util/: float.hpp  morton.hpp  pfor.hpp  raw.hpp  rle.cpp  rle.hpp  varint.hpp  vectorized.hpp  zigzag.hpp
cpp/test/: CMakeLists.txt  decode.cpp  packed_bitset.cpp  synthetic_mlt_generator.hpp  test_decode.cpp  test_encode.cpp  test_fastpfor.cpp  test_fsst.cpp  test_hilbert_curve.cpp  test_morton_curve.cpp  test_packed_bitset.cpp  test_synthetic.cpp  test_synthetics.cpp  test_type_map.cpp  test_util.cpp  test_varint.cpp
cpp/tool/: CMakeLists.txt  generate-fastpfor-vectors.cpp  mlt-geojson.cpp  mlt-json.cpp  synthetic-geojson.cpp  synthetic-geojson.hpp  synthetic.test.ts  test-synthetic.mjs
java/mlt-core/resources/: CMakeLists.txt  FsstWrapper.cpp
parser/rust/: Cargo.toml
rust/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  dist-workspace.toml  index.html  justfile  mod.just  release-plz.toml  rust-toolchain.toml  rustc-ice-2026-03-01T22_53_43-186869.txt  tomlfmt.toml
rust/assets/: expected.json  test.mlt  test.mlt.meta.pbf
rust/benches/: benchmark.rs
rust/fast-mvt/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  justfile
rust/fast-mvt/benches/: common.rs  decoder.rs  encoder.rs
rust/fast-mvt/examples/: profile_decoder.rs
rust/fast-mvt/src/: error.rs  geom.rs  geom_reader.rs  geom_writer.rs  geometry.rs  lib.rs  proto.rs  reader.rs  types.rs  writer.rs
rust/fast-mvt/tests/: corrupted_tiles.rs  mvt_fixtures.rs  round_trip.rs
rust/mlt/: CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile
rust/mlt-core/: CHANGELOG.md  Cargo.toml  README.md
rust/mlt-core/benches/: bench_utils.rs  decoding.rs  decoding_e2e.rs  decoding_strings.rs  decoding_utils.rs  encoding.rs  encoding_e2e.rs  encoding_from_mvt.rs  morton.rs
rust/mlt-core/fuzz/: Cargo.toml  README.md
rust/mlt-core/proto-codegen/: Cargo.toml
rust/mlt-core/src/: analyse.rs  analyze.rs  decode.rs  decoder.rs  enc_dec.rs  encode.rs  errors.rs  layer.rs  lazy_state.rs  lib.rs  mvt.rs  optimiser.rs  optimizer.rs  test_helpers.rs  v2.rs
rust/mlt-core/tests/: dump_coverage.rs  geojson.rs  geometry_optimizer.rs  helpers.rs  id_optimizer.rs  mvt_round_trip.rs  property_optimizer.rs  property_roundtrip.rs  snapshots.rs  sort.rs  synthetics.rs  tag02_roundtrip.rs  unknown_layer.rs
rust/mlt-ffi/: CHANGELOG.md  Cargo.toml  README.md  config.toml
rust/mlt-ffi/src/: lib.rs
rust/mlt-fuzz/src/: lib.rs
rust/mlt-legacy/: Cargo.toml  README.md  build.rs  justfile
rust/mlt-legacy/src/: error.rs
rust/mlt-nom/: Cargo.toml  README.md  justfile
rust/mlt-nom/fuzz/: Cargo.toml  README.md  crash-422b4fed2b6e6226746ded123410ce05697d8b51
rust/mlt-nom/src/: _main.rs.old  analyse.rs  decodable.rs  errors.rs  geojson.rs  layer.rs  lib.rs  main.rs  parser.rs  parsers.rs  tests.rs  unknown.rs  utils.rs
rust/mlt-nom/tests/: geojson.rs  snapshots.rs  synthetics.rs  visualizer_test.rs
rust/mlt-py/: CHANGELOG.md  Cargo.toml  README.md  maplibre_tiles.pyi  mlt.pyi  pyproject.toml
rust/mlt-py/src/: encode.rs  feature.rs  lib.rs  tile_transform.rs
rust/mlt-py/tests/: test_encode.py  test_encode_geojson.py  test_encode_geojson_properties.py  test_encode_mvt.py  test_encode_mvt_properties.py  test_encode_properties.py
rust/mlt-pyo3/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
rust/mlt-pyo3/src/: feature.rs  lib.rs
rust/mlt-synthetics/: Cargo.toml
rust/mlt-synthetics/src/: geometry.rs  layer.rs  main.rs  writer.rs
rust/mlt-synthetics/tests/: synthetics.rs
rust/mlt-wasm/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
rust/mlt-wasm/js/: decoder.bench.ts  index.ts  synthetic.spec.ts  vectorTile.ts
rust/mlt-wasm/src/: geometry.rs  ids.rs  layer.rs  lib.rs  properties.rs  tile.rs
rust/mlt/fuzz/: Cargo.toml  README.md
rust/mlt/src/: README.md  convert.rs  decodable.rs  dump.rs  error.rs  hexdump.rs  lib.rs  ls.rs  main.rs
rust/mlt/tests/: common.rs  geojson.rs  mlt_decoder_test.rs  snapshots.rs  synthetics.rs
rust/mlt/wix/: main.wxs
rust/old/src/: decodings.rs  main.rs  mlt.rs
rust/old/tests/: web.rs
rust/scripts/: bench_param.sh  diff.sql
rust/src/: lib.rs  main.rs  mod.rs
rust/src/decoding/: bitpacking_decoder.rs  decoding_utils.rs  double_decoder.rs  fastpfor_decoder.rs  float_decoder.rs  fsst_decoding.rs  mod.rs  (+5 more)
rust/wasm-test/: Cargo.toml  index.html
rust/web/: index.js
(+6633 files in other folders)
