load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "mlt_internal_headers",
    hdrs = glob(["src/mlt/**/*.hpp"]),
    include_prefix = "",
    strip_include_prefix = "src",
    visibility = ["//visibility:private"],
)

cc_library(
    name = "mlt_cpp",
    srcs = glob([
        "src/mlt/**/*.cpp",
    ]),
    hdrs = glob([
        "include/mlt/**/*.hpp",
    ]),
    copts = select({
        "@platforms//os:windows": [
            "/std:c++20",
        ],
        "//conditions:default": [
            "-std=c++20",
            "-Wall",
            "-Wextra",
        ],
    }),
    defines = [
        "MLT_WITH_JSON=0",
        "MLT_WITH_FASTPFOR=0",
    ],
    implementation_deps = [":mlt_internal_headers"],
    include_prefix = "",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
