load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "mlt_internal_headers",
    hdrs = glob(
        [
            "src/mlt/**/*.hpp",
        ],
        exclude = ["src/mlt/encode/**"],
    ),
    include_prefix = "",
    strip_include_prefix = "src",
    visibility = ["//visibility:private"],
)

cc_library(
    name = "mlt_fastpfor_headers",
    hdrs = glob(
        [
            "vendor/fastpfor/fastpfor/*.h",
        ],
    ),
    include_prefix = "",
    strip_include_prefix = "vendor/fastpfor",
    visibility = ["//visibility:private"],
)

cc_library(
    name = "mlt_cpp",
    srcs = glob(
        [
            "src/mlt/**/*.cpp",
            "vendor/fastpfor/fastpfor/*.cpp",
        ],
        exclude = [
            "src/mlt/encode/**",
            "src/mlt/encoder.cpp",
        ],
    ),
    hdrs = glob(
        ["include/mlt/**/*.hpp"],
        exclude = ["include/mlt/encoder.hpp"],
    ),
    copts = select({
        "@platforms//os:windows": [
            "/std:c++20",
        ],
        "//conditions:default": [
            "-std=c++20",
            "-Wall",
            "-Wextra",
        ],
    }),
    defines = [
        "MLT_WITH_JSON=0",
    ],
    implementation_deps = [
        "mlt_fastpfor_headers",
        ":mlt_internal_headers",
    ],
    include_prefix = "",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
