[workspace]
resolver = "3"
members = ["mlt", "mlt-core", "mlt-pyo3"]
# mlt-core/fuzz because cargo-fuzz does not have workspace support
# mlt-legacy due to buildscript issues
exclude = ["mlt-core/fuzz", "mlt-legacy"]
default-members = ["mlt-core", "mlt", "mlt-pyo3"]

[workspace.package]
repository = "https://github.com/nyurik/maplibre-tile-spec"
homepage = "https://maplibre.org"
authors = ["Maplibre Contributors"]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["maplibre", "tile", "mlt", "mvt", "map"]
categories = ["science::geo"]
rust-version = "1.87.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
dead_code = "allow"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"  # 14
# TODO: fix these
cast_possible_truncation = "allow"  # 24
cast_possible_wrap = "allow"  # 20
too_many_lines = "allow"  # 4
missing_panics_doc = "allow"  # 4
must_use_candidate = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
