[workspace]
resolver = "3"
members = ["mlt", "mlt-core", "mlt-pyo3", "mlt-synthetics"]
default-members = ["mlt", "mlt-core", "mlt-synthetics"]
# Excluding mlt-core/fuzz because cargo-fuzz does not have workspace support
exclude = ["mlt-core/fuzz"]

[workspace.package]
authors = ["Maplibre Contributors"]
categories = ["science::geo"]
edition = "2024"
homepage = "https://maplibre.org"
keywords = ["maplibre", "tile", "mlt", "mvt", "map"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maplibre/maplibre-tile-spec"
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1"
borrowme = "0.0.15"
clap = { version = "4.5.58", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
crossterm = "0.29.0"
derive_builder = "0.20"
fastpfor = "0.6"
flate2 = "1"
fsst-rs = "0.5"
geo = "0.32.0"
geo-types = "0.7.18"
hex = "0.4.3"
insta = "1.43.2"
integer-encoding = "4.0.2"
json5 = "1.3"
mlt-core = { version = "0.1.1", path = "mlt-core" }
mvt-reader = "2.2.0"
num-traits = "0.2.19"
num_enum = "0.7.4"
pretty_assertions = "1.4"
probabilistic-collections = "0.7"
proptest = "1.6"
proptest-derive = "0.8"
pyo3 = "0.28.2"
pyo3-stub-gen = "0.19.0"
pyo3-stub-gen-derive = "0.19.0"
ratatui = "0.30.0"
rayon = "1"
rstar = "0.12"
rstest = "0.26.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
size_format = "1"
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
tabled = "0.20"
test_each_file = "0.3.5"
thiserror = "2.0.11"
thousands = "0.2"
zigzag = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Restrictions
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"
unused_trait_names = "warn"

# Too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
too_many_lines = "allow"
