[workspace]
resolver = "3"
members = ["mlt", "mlt-core", "mlt-py", "mlt-synthetics", "mlt-wasm"]
default-members = ["mlt", "mlt-core", "mlt-synthetics"]
# Excluding mlt-core/fuzz because cargo-fuzz does not have workspace support
exclude = ["mlt-core/fuzz"]

[workspace.package]
authors = ["Maplibre Contributors"]
categories = ["science::geo"]
edition = "2024"
homepage = "https://maplibre.org"
keywords = ["maplibre", "tile", "mlt", "mvt", "map"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maplibre/maplibre-tile-spec"
rust-version = "1.91.0"

[workspace.dependencies]
anyhow = "1"
arbitrary = { version = "1.4", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
crossterm = "0.29.0"
enum_dispatch = "0.3"
fastpfor = { version = "0.9", features = ["rust"] }
flate2 = "1"
fsst-rs = "0.5"
geo = "0.32.0"
geo-types = "0.7.18"
glob = "0.3"
globset = "0.4"
hex = "0.4.3"
hilbert_2d = "1.1.0"
insta = "1.47.2"
integer-encoding = "4.0.2"
js-sys = "0.3"
mlt-core = { version = "0.6.0", path = "mlt-core", default-features = false }  # TODO: rm default-features = false after geo 0.33+ is released
mvt-reader = "2.3.0"
num-traits = "0.2.19"
num_enum = "0.7.6"
pretty_assertions = "1.4"
probabilistic-collections = "0.7"
proptest = "1.11"
proptest-derive = "0.8"
pyo3 = "0.28.3"
pyo3-stub-gen = "0.21.0"
ratatui = "0.30.0"
rayon = "1"
rstar = "0.12"
rstest = "0.26.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
size_format = "1"
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
tabled = "0.20"
test_each_file = "0.3.5"
thiserror = "2.0.11"
thousands = "0.2"
union-find = "0.4.3"
wasm-bindgen = "0.2"
wide = "1.1.1"
zigzag = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Restrictions
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"
unused_trait_names = "warn"
use_self = "warn"

# Too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
too_many_lines = "allow"
