cmake_minimum_required (VERSION 3.12)
project (mlt-cpp-json)
add_executable(mlt-cpp-json mlt-geojson.cpp)
set_property(TARGET mlt-cpp-json PROPERTY CXX_STANDARD 20)
set(MLT_WITH_JSON ON CACHE BOOL "Include JSON Support" FORCE)
target_compile_definitions(mlt-cpp-json PUBLIC MLT_WITH_JSON=1 PROTOZERO_USE_VIEW=std::string_view)
target_link_libraries(mlt-cpp-json PRIVATE mlt-cpp protozero FastPFOR)
