[package]
name = "mlt-core"
description = "MapLibre Tile library code"
version = "0.5.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bench]]
name = "decoding_e2e"
harness = false

[[bench]]
name = "encoding_e2e"
harness = false

[[bench]]
name = "decoding_utils"
harness = false

[[bench]]
name = "decoding_strings"
harness = false

[features]
default = ["fastpfor-cpp"]
arbitrary = ["dep:arbitrary", "geo-types/arbitrary"]
fastpfor-cpp  = ["fastpfor/cpp_portable"]
fastpfor-rust = ["fastpfor/rust"]

[dependencies]
arbitrary = { workspace = true, optional = true }
enum_dispatch.workspace = true
fastpfor.workspace = true
fsst-rs.workspace = true
geo-types.workspace = true
hex.workspace = true
hilbert_2d.workspace = true
integer-encoding.workspace = true
mvt-reader.workspace = true
num-traits.workspace = true
num_enum.workspace = true
probabilistic-collections.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
union-find.workspace = true
wide.workspace = true
zigzag.workspace = true

[dev-dependencies]
criterion.workspace = true
geo-types = { workspace = true, features = ["arbitrary"] }
insta.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
rstest.workspace = true
test_each_file.workspace = true

[lints]
workspace = true
